--- a/Riffle/Views/Host/Roundabout.cshtml
+++ b/Riffle/Views/Host/Roundabout.cshtml
@@ -5,6 +5,8 @@
 
 <h1>Roundabout</h1>
 
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<p id="joinCode"></p>
+
+<script src="~/lib/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/host/roundabout.js"></script>
 
