Play button with timer for host

--- a/Riffle/Views/Host/Roundabout.cshtml
+++ b/Riffle/Views/Host/Roundabout.cshtml
@@ -5,7 +5,14 @@
 
 <h1>Roundabout</h1>
 
-<p id="joinCode"></p>
+<h2 id="joinCode"></h2>
+
+<p id="playerList"></p>
+
+<br />
+
+<button id="playButton">Start Game</button>
+<p id="playTimer"></p>
 
 <script src="~/lib/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/host/roundabout.js"></script>
