Join Roundabout room page

--- a/Riffle/Views/Join/Join.cshtml
+++ b/Riffle/Views/Join/Join.cshtml
@@ -7,7 +7,7 @@
 
 <form asp-action="JoinGame" method="post">
     <label for="name">Name:</label>
-    <input type="text" id="name" name="Name" required />
+    <input type="text" id="name" name="name" required />
     <label for="joinCode">Join Code:</label>
     <input type="text" id="joinCode" name="joinCode" value="@ViewData["code"]" required />
     <button type="submit">Join Room</button>
