Member / Roundabout: Guess word and end game screens

--- a/Riffle/Views/Join/Roundabout.cshtml
+++ b/Riffle/Views/Join/Roundabout.cshtml
@@ -10,7 +10,7 @@
 </div>
 
 <div id="choiceScreen" style="display:none;">
-	<p>Choose your secret word!</p>
+	<p id="choiceMsg">Choose your secret word!</p>
 	<br />
 	<input type="text" id="choiceBox" />
 	<button id="choiceSubmit">Submit</button>
@@ -18,6 +18,10 @@
 
 <div id="chosenScreen" style="display:none;">
 	<p id="chosenText"></p>
+</div>
+
+<div id="endScreen" style="display:none;">
+	<p id="endMsg"></p>
 </div>
 
 <div id="joinCodeData" data-code="@ViewData["joinCode"]"></div>
