Server / Roundabout: Use frontend scripts

--- a/Riffle/Views/Host/Roundabout.cshtml
+++ b/Riffle/Views/Host/Roundabout.cshtml
@@ -5,15 +5,14 @@
 
 <h1>Roundabout</h1>
 
-<h2 id="joinCode"></h2>
+<h2 id="join-code"></h2>
 
-<p id="playerList"></p>
+<p id="player-list"></p>
 
 <br />
 
-<button id="playButton">Start Game</button>
-<p id="playTimer"></p>
+<button id="play-button">Start Game</button>
+<p id="play-timer"></p>
 
-<script src="~/lib/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/host/roundabout.js"></script>
+<script src="~/@ViewData["ScriptSrc"]"></script>
 
