Backend / Roundabout: Add type="module" to script

--- a/Riffle/Views/Host/Roundabout.cshtml
+++ b/Riffle/Views/Host/Roundabout.cshtml
@@ -9,7 +9,7 @@
 }
 
 @section Scripts {
-    <script src="~/@ViewData["ScriptSrc"]"></script>
+    <script type="module" src="~/@ViewData["ScriptSrc"]"></script>
 }
 
 <div class="background"></div>
