--- a/Riffle/Views/Join/Join.cshtml
+++ b/Riffle/Views/Join/Join.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Join Game</h1>
 
-<form asp-action="JoinGame" method="post">
+<form asp-action="JoinAction" method="post">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required />
     <label for="joinCode">Join Code:</label>
