Frontend / Roundabout: Members can choose their word

--- a/Riffle/Views/Join/Roundabout.cshtml
+++ b/Riffle/Views/Join/Roundabout.cshtml
@@ -12,22 +12,24 @@
     <script type="module" src="~/@ViewData["ScriptSrc"]"></script>
 }
 
-<div id="lobby-screen">
+<div class="background"></div>
+
+<div id="lobby-screen" class="screen">
 	<p id="lobby-msg">Connecting...</p>
 </div>
 
-<div id="choice-screen">
+<div id="choice-screen" class="screen">
 	<p id="choice-msg">Choose your secret word!</p>
 	<br />
 	<input type="text" id="choice-input" />
 	<button id="choice-submit">Submit</button>
 </div>
 
-<div id="chosen-screen">
+<div id="chosen-screen" class="screen">
 	<p id="chosen-msg"></p>
 </div>
 
-<div id="end-screen">
+<div id="end-screen" class="screen">
 	<p id="end-msg"></p>
 </div>
 
