--- a/RiffleFrontend/src/styles/member.css
+++ b/RiffleFrontend/src/styles/member.css
@@ -33,6 +33,19 @@
         border: 1px solid black;
         background-color: #FFFFFF30;
         font: inherit;
+        width: 90%;
+        text-align: center;
+        margin: 10px;
+        padding: 0;
+    }
+
+    input {
+        font-family: sans-serif;
+        font-weight: bold;
+    }
+
+    button {
+        border-radius: 1vw;
     }
     
     input:disabled, button:disabled {
@@ -40,6 +53,7 @@
         color: #606060;
         cursor: default;
     }
+
 }
 
 input {
