feat(FE / Roundabout): Show base sentence with blanks

--- a/Riffle/Views/Join/Roundabout.cshtml
+++ b/Riffle/Views/Join/Roundabout.cshtml
@@ -29,6 +29,10 @@
 	<p id="chosen-msg"></p>
 </div>
 
+<div id="sent-screen" class="screen">
+	<p id="sent-msg"></p>
+</div>
+
 <div id="end-screen" class="screen">
 	<p id="end-msg"></p>
 </div>
