feat(FE / Roundabout): Player that's up can build a sentence

--- a/Riffle/Views/Join/Roundabout.cshtml
+++ b/Riffle/Views/Join/Roundabout.cshtml
@@ -31,6 +31,10 @@
 
 <div id="sent-screen" class="screen">
 	<p id="sent-msg"></p>
+	<button id="sent-submit">Submit</button>
+	<div id="sent-columns" class="columns">
+
+	</div>
 </div>
 
 <div id="end-screen" class="screen">
