feat(FE / Roundabout): Display chosen sentence

--- a/Riffle/Views/Host/Roundabout.cshtml
+++ b/Riffle/Views/Host/Roundabout.cshtml
@@ -14,16 +14,22 @@
 
 <div class="background"></div>
 
-<p>Roundabout</p>
+<div id="start-screen" class="screen">
+    <p>Roundabout</p>
 
-<div id="player-count"></div>
+    <div id="player-count"></div>
 
-<div id="join-code"></div>
+    <div id="join-code"></div>
 
-<p id="player-list"></p>
+    <p id="player-list"></p>
 
-<br />
+    <br />
 
-<button id="play-button">Start Game</button>
-<p id="play-timer"></p>
+    <button id="play-button">Start Game</button>
+    <p id="play-timer"></p>
+</div>
+
+<div id="playing-screen" class="screen">
+    <p id="received-sentence"></p>
+</div>
 
